1.1.320 SER-5986 fix emoji webchat bug where microsoft emoji would be overlapping twemoji

--- a/app/components/styles/EmojiTextArea.scss
+++ b/app/components/styles/EmojiTextArea.scss
@@ -51,5 +51,9 @@
     line-height: inherit;
     margin: -0.2ex 0em 0.2ex;
     color: transparent;
+
+    span {
+      opacity: 0;
+    }
   }
 }
